[tool.poetry]
name = "ice-cream-dataops-05"
version = "0.1.0"
description = ""
authors = ["BakerGhazal <bakir.mobasher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "0.5.30"


[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

